--- a/ping_test.yml
+++ b/ping_test.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check connectivity to remote servers
-  hosts: 192.168.100.24
+  hosts: all
   gather_facts: True
   tasks:
     - name: ping
